fix(ui): users page renders role properly
